[gd_scene load_steps=2 format=3 uid="uid://dyt1m05mgvpal"]

[ext_resource type="Script" uid="uid://cqynvw3w5pond" path="res://script/test_levels.gd" id="1_u3mtq"]

[node name="levels_0" type="Node2D"]
script = ExtResource("1_u3mtq")

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
position = Vector2(629, -8)
color = Color(1, 1, 0.992157, 1)
energy = 0.21
shadow_enabled = true
shadow_color = Color(0.34902, 0.34902, 0.34902, 0.607843)

[node name="HBoxContainerButton" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 534.0
offset_top = 9.0
offset_right = 737.0
offset_bottom = 40.0
grow_horizontal = 2
size_flags_horizontal = 4

[node name="Start" type="Button" parent="HBoxContainerButton"]
layout_mode = 2
text = "Старт"

[node name="Restart" type="Button" parent="HBoxContainerButton"]
layout_mode = 2
text = "Повтор"

[node name="Next" type="Button" parent="HBoxContainerButton"]
visible = false
layout_mode = 2
text = "Дальше"

[connection signal="pressed" from="HBoxContainerButton/Start" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainerButton/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="HBoxContainerButton/Next" to="." method="_on_next_pressed"]
